--- a/concurrency.html
+++ b/concurrency.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Timeline</title>
+    <link rel="stylesheet" href="css/concurrency.css">
     <script src="node_modules/d3/build/d3.min.js"></script>
     <script src="node_modules/topojson/dist/topojson.min.js"></script>
   </head>
