--- a/index.html
+++ b/index.html
@@ -39,7 +39,12 @@ body {font-family: "Lato", sans-serif}
 
   <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
     <p class="w3-justify">
-      A continuación
+      A continuación se puede ver un heatmap realizado con los datos de la aplicacion Apata.
+      Al cambiar el día en el selector, se identifican las comunas en donde se iniciarón
+      la mayor cantidad de viajes. La codificación se hizo en base a una escala secuencial,
+      donde el color rojo indica muchos viajes y el amarillo menor cantidad de viajes.
+      Es posible observar que la cantidad de viajes no parece variar mucho durante la semana,
+      lo que se ve contrastado con lo que ocurre el fin de semana.
     </p>
   </div>
 
